--- a/templates/morning.html
+++ b/templates/morning.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/morning-glass.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/morning.css') }}">
 
 <div class="glass-container fade-in-up mb-5">
 
@@ -152,3 +152,4 @@
 
 <script src="{{ url_for('static', filename='js/morning.js') }}"></script>
 {% endblock %}
+
